--- a/index.html
+++ b/index.html
@@ -431,10 +431,11 @@
                         </ul>
                     </div>
                 </div>
-        </div>
+            </div>
         <p>Copyright © 2022</p>
     </div>
-</div>
+    </div>
+    <h6>Development & Design By <a href="mailto:contactwillswebsites@gmail.com?subject=Website Build Inquiry" target="_blank">Will's Websites</a></h6>
 </footer>
 <script src="index.js" type="text/javascript"></script>
 <script src="home.js" type="text/javascript"></script>
