--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="scroll-content">
                         <h2>What is Golf Tribe?</h2>
                         <p class="introduction">
-                            What is Golf Tribe? Golf Tribe is a golf simulator we built in a shed. Why a shed? We want to provide an opportunity for you to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays. With the Foresight GC Quad you’ll get the most accurate club and ball data available, which is why the GC Quad is so popular with club fitters, club testers and tour pros. And now you can use the same technology to improve your game. Come join the Tribe.
+                            Golf Tribe is a golf simulator we built in a shed. Why a shed? We want to provide an opportunity for you to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays. With the Foresight GC Quad you’ll get the most accurate club and ball data available, which is why the GC Quad is so popular with club fitters, club testers and tour pros. And now you can use the same technology to improve your game. Come join the Tribe.
                         </p>
                     </div>
                 </div>
