--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home | Golf Tribe</title>
     <meta name="Description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta property='og:title' content='Home | Golf Tribe'/>
-    <meta property='og:image' content='https://golf-tribe.com/social-share.png'/>
+    <meta property='og:image' content='https://golf-tribe.com/social-share.jpg'/>
     <meta property='og:description' content='Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.'/>
     <meta property='og:url' content='https://golf-tribe.com'/>
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
