--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta property="og:type" content="website" />
     <meta property='og:title' content='Home | Golf Tribe' />
-    <meta property='og:image:secure_url' content='https://golf-tribe.com/social-share.png' />
+    <meta property='og:image:url' content='https://golf-tribe.com/social-share.png' />
     <meta property='og:description' content='Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.' />
     <meta property='og:url' content='https://golf-tribe.com/' />
     <meta property="og:image:type" content="image/png">
