--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                                 <a href="index.html#jumpTo">About</a>
                             </li>
                             <li class="f-nav-item">
-                                <a href="index.html#jumpServices">Features</a>
+                                <a href="index.html#jumpFeatures">Features</a>
                             </li>
                             <li class="f-nav-item">
                                 <a href="index.html#jumpTechnology">Technology</a>
