--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta property="og:type" content="website" />
-    <meta property='og:title' content='Home | Golf Tribe' />
-    <meta property='og:image:url' content='https://golf-tribe.com/social-share.png' />
-    <meta property='og:image' content='https://golf-tribe.com/social-share.png' />
-    <meta property='og:description' content='Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.' />
-    <meta property='og:url' content='https://golf-tribe.com/' />
+    <meta property="og:title" content="Home | Golf Tribe" />
+    <meta property="og:image:url" content="https://golf-tribe.com/social-share.png" />
+    <meta property="og:image" content="https://golf-tribe.com/social-share.png" />
+    <meta property="og:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays." />
+    <meta property="og:url" content="https://golf-tribe.com/" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1332">
     <meta property="og:image:height" content="773">
-
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Home | Golf Tribe">
+    <meta name="twitter:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
+    <meta name="twitter:image" content="https://golf-tribe.com/social-share.png">
 
     <title>Home | Golf Tribe</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
