--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Home | Golf Tribe">
+    <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Golf Tribe">
+    <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://www.golf-tribe.com/">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Home | Golf Tribe" />
     <meta property="og:image:url" content="https://golf-tribe.com/social-share.png" />
@@ -18,7 +22,6 @@
     <meta name="twitter:title" content="Home | Golf Tribe">
     <meta name="twitter:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta name="twitter:image" content="https://golf-tribe.com/social-share.png">
-
     <title>Home | Golf Tribe</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="index.css" type="text/css">
