--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
     <meta name="description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Home | Golf Tribe">
     <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Golf Tribe">
     <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://www.golf-tribe.com/">
+    <meta property="og:site_name" content="Golf Tribe">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Home | Golf Tribe" />
-    <meta property="og:image:url" content="https://golf-tribe.com/social-share.png" />
-    <meta property="og:image" content="https://golf-tribe.com/social-share.png" />
     <meta property="og:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays." />
-    <meta property="og:url" content="https://golf-tribe.com/" />
+    <meta property="og:url" content="https://www.golf-tribe.com/" />
+    <meta property="og:image:url" content="https://www.golf-tribe.com/social-share.png" />
+    <meta property="og:image" content="https://www.golf-tribe.com/social-share.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1332">
     <meta property="og:image:height" content="773">
