--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:image:width" content="1332">
     <meta property="og:image:height" content="773">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@william_schaef">
     <meta name="twitter:title" content="Home | Golf Tribe">
     <meta name="twitter:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta name="twitter:image" content="https://golf-tribe.com/social-share.png">
