Fixing a lot of stuff and a ton of refactoring

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <h2>Simulator Features</h2>
                     </div>
                     <div class="play-train-cards">
-                        <div class="card-container card-container1 popup" onclick="modalFunction()">
+                        <div class="card-container card-container1 popup">
                             <div class="card card1">
                                 <div class="imgBx">
                                     <img src="./src/img/play-icon.png">
@@ -163,7 +163,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="popuptext" id="myPopup">
+                            <div class="popuptext">
                                 <h3>Play</h3>
                                 <ul>
                                     <li>Play courses from all around the world</li>
@@ -173,7 +173,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="card-container card-container2 popup" onclick="modalFunction2()">
+                        <div class="card-container card-container2 popup">
                             <div class="card card2">
                                 <div class="imgBx">
                                     <img src="./src/img/compete-icon.png">
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="popuptext" id="myPopup2">
+                            <div class="popuptext">
                                 <h3>Compete</h3>
                                 <ul>
                                     <li>Create an FSX Live account to compete with other golfers around the world</li>
@@ -194,7 +194,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="card-container card-container3 popup" onclick="modalFunction3()">
+                        <div class="card-container card-container3 popup">
                             <div class="card card3">
                                 <div class="imgBx">
                                     <img src="./src/img/improve-icon.png">
@@ -206,7 +206,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="popuptext" id="myPopup3">
+                            <div class="popuptext">
                                 <h3>Improve</h3>
                                 <ul>
                                     <li>Gather swing data using the most accurate launch monitor in the game</li>
@@ -401,21 +401,11 @@
                     <h5>Golf Tribe </h5>
                     <div class="f-social-media">
                         <div class="f-social-media-inner">
-                            <!-- <div class="facebook">
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </div> -->
                             <div class="instagram">
                                 <a href="https://www.instagram.com/golftribesf/" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </div>
-                            <!-- <div class="youtube">
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                            </div> -->
                         </div>
                     </div>
                     <p>Copyright © 2022</p>
