--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <div class="scroll-content">
                             <h2>Memberships and Lessons</h2>
                             <div class="member-intro">
-                                <p>Enjoy the games most accurate launch monitor at a fraction of the cost of other golf simulators. Click one of the buttons below to schedule a demo.</p>
+                                <p>Enjoy the game's most accurate launch monitor at a fraction of the cost of other golf simulators. Click one of the buttons below to schedule a demo.</p>
                                 <a href="mailto:golftribesf@gmail.com?subject=Golf Tribe  |  Demo Inquiry" class="btn">Schedule a Demo</a>
                             </div>
                             <h3>Winter Memberships (Oct - Mar)</h3>
