--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays." />
     <meta property="og:url" content="https://www.golf-tribe.com/" />
     <meta property="og:image:url" content="https://www.golf-tribe.com/src/img/social-share.png" />
-    <meta property="og:image" content="https://www.golf-tribe.com/src/img/social-share.png" />
+    <meta name="image" property="og:image" content="https://www.golf-tribe.com/src/img/social-share.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1332">
     <meta property="og:image:height" content="773">
@@ -429,7 +429,7 @@
                                 <a href="index.html#jumpPricing">Pricing</a>
                             </li>
                             <li>
-                                <a href="mailto:golftribesf@gmail.com"  target="_blank">Contact</a>
+                                <a href="mailto:golftribesf@gmail.com" target="_blank">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -437,7 +437,7 @@
             </div>
     </div>
     </div>
-    <h6>Development & Design By <a href="mailto:contactwillswebsites@gmail.com?subject=Website Build Inquiry" target="_blank">Will's Websites</a></h6>
+    <h6>Development & Design By <a href="https://www.willswebsitesdesign.com" target="_blank">Will's Websites</a></h6>
 </footer>
 <script src="https://cdn.auth0.com/js/auth0-spa-js/1.20/auth0-spa-js.production.js"></script>
 <script src="./src/js/app.js"></script> 
