--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,6 @@
     <meta property="og:image:width" content="1332">
     <meta property="og:image:height" content="773">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@william_schaef">
     <meta name="twitter:title" content="Home | Golf Tribe">
     <meta name="twitter:description" content="Golf Tribe is a golf simulator we built in a shed to take advantage of the most advanced launch monitor technology at a fraction of the price of other hitting bays.">
     <meta name="twitter:image" content="https://golf-tribe.com/src/img/social-share.png">
@@ -408,7 +407,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>Copyright © 2022</p>
+                    <p>© Copyright 2023 Golf Tribe. All Rights Reserved</p>
                 </div> 
                 <div class="footer-right">
                     <div class="f-nav">
